	src/selection.cpp (sp_selection_bbox_document),
	src/sp-item.cpp (sp_item_bbox_desktop, sp_item_private_snappoints),
	src/sp-pattern.cpp (sp_pattern_painter_new),
	src/modules/gnome.cpp (sp_module_print_gnome_fill),
	src/widgets/icon.cpp (sp_icon_image_load_svg):
	Remove uses of nr_matrix_d_from_f.
	* src/libnr/nr-matrix.h, src/libnr/nr-matrix.cpp (nr_matrix_d_from_f):
	Remove.

	* src/sp-item.h, src/sp-item.cpp (sp_item_set_i2d_affine_d):
	Merge with sp_item_set_i2d_affine.  Update callers.

	* src/rubberband.h, src/rubberband.cpp (sp_rubberband_start):
	Add NR::Point version.
	Implement x,y version as call to NR::Point version.

2004-01-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/desktop-snap.h, src/desktop-snap.cpp (sp_desktop_dim_snap_list):
	Export this function.
	(sp_desktop_horizontal_snap_list, sp_desktop_vertical_snap_list):
	Remove these now-unused functions.
	* src/select-context.cpp (sp_selection_moveto):
	Use sp_desktop_dim_snap_list instead of
	sp_desktop_horizontal_snap_list, sp_desktop_vertical_snap_list.

	* src/select-context.cpp (sp_selection_moveto): Fix what appears to be
	a memory leak.

	* src/rubberband.h, src/rubberband.cpp (sp_rubberband_move):
	Add NR::Point version.

	* src/seltrans.h (sp_sel_trans_point_desktop): Add NR::Point version.

	* src/seltrans.h, src/seltrans.cpp (sp_sel_trans_point_desktop,
	sp_sel_trans_origin_desktop): Indicate that pointer isn't written through.

	* src/node-context.cpp, src/select-context.cpp:
	Make some globals static.

	* src/style.cpp (sp_style_read_pfloat, SPS_READ_IFLOAT_IF_UNSET, 
	SPS_READ_PFLOAT_IF_UNSET): Remove these unused functions/macros.

2004-01-28  MenTaLguY  <mental@rydia.net>

	* src/toolbox.cpp: aux toolbar now expands properly when torn off
	(fix for bug #874923)

	* src/libnr/nr-svp.cpp, src/libnr/nr-stroke.cpp,
	  src/libnr/nr-svp-private.h, src/libnr/nr-svp.h,
	  src/libnr/nr-svp-render.cpp, src/libnr/nr-svp-uncross.cpp:

	  NRCoord -> NR::Coord
